fix:picture text-align:center

--- a/art-quiz/src/components/quest/quest.css
+++ b/art-quiz/src/components/quest/quest.css
@@ -89,6 +89,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-align: center;
     align-items: center;
     row-gap: 10px;
     font-family: Arial, Helvetica, sans-serif;
